force-app/main/default/objects/Partner_Spotlight__c/Partner_Spotlight__c.object-meta.xml
<CustomObject>
    <label>Partner Spotlight</label>
    <nameField>
        <displayFormat>PS-{0000}</displayFormat>
        <label>Partner Spotlight #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partner Spotlights</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>