force-app/main/default/objects/Partner_Spotlight__c/fields/Company_s_Significant_Win__c.field-meta.xml
<CustomField>
    <fullName>Company_s_Significant_Win__c</fullName>
    <label>Company&apos;s Significant Win</label>
    <type>TextArea</type>
</CustomField>