force-app/main/default/objects/Partner_Spotlight__c/fields/Country_the_Partner_is_located_in__c.field-meta.xml
<CustomField>
    <fullName>Country_the_Partner_is_located_in__c</fullName>
    <label>Country the Partner is located in</label>
    <length>255</length>
    <type>Text</type>
</CustomField>