force-app/main/default/objects/Partner_Spotlight__c/fields/Event_Promotion__c.field-meta.xml
<CustomField>
    <fullName>Event_Promotion__c</fullName>
    <inlineHelpText>How did you promote the event?  Did you have any post event activities?</inlineHelpText>
    <label>Event Promotion</label>
    <type>TextArea</type>
</CustomField>