force-app/main/default/objects/Partner_Spotlight__c/fields/Industries_partner_focuses_on__c.field-meta.xml
<CustomField>
    <fullName>Industries_partner_focuses_on__c</fullName>
    <label>Industries partner focuses on</label>
    <length>255</length>
    <type>Text</type>
</CustomField>