force-app/main/default/objects/Partner_Spotlight__c/fields/Partner_Contact_s_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Partner_Contact_s_Email_Address__c</fullName>
    <label>Partner Contact&apos;s Email Address</label>
    <length>80</length>
    <type>Text</type>
</CustomField>