force-app/main/default/objects/Partner_Spotlight__c/fields/Partner_Contact_s_Title_or_Position__c.field-meta.xml
<CustomField>
    <fullName>Partner_Contact_s_Title_or_Position__c</fullName>
    <label>Partner Contact&apos;s Title or Position</label>
    <length>255</length>
    <type>Text</type>
</CustomField>