force-app/main/default/objects/Partner_Spotlight__c/fields/Partner_Name__c.field-meta.xml
<CustomField>
    <fullName>Partner_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partner Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Partner Spotlights</relationshipLabel>
    <relationshipName>Partner_Spotlights</relationshipName>
    <type>Lookup</type>
</CustomField>