force-app/main/default/objects/Partner_Spotlight__c/fields/Partner_Spotlight_Type__c.field-meta.xml
<CustomField>
    <fullName>Partner_Spotlight_Type__c</fullName>
    <label>Partner Spotlight Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Partner Feature Friday</fullName>
            </value>
            <value>
                <fullName>MDF Success Story</fullName>
            </value>
            <value>
                <fullName>Partner Ambassador Event</fullName>
            </value>
            <value>
                <fullName>Miscellaneous Business Related Topics</fullName>
            </value>
            <value>
                <fullName>Significant Customer Win</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>