force-app/main/default/objects/Partner_Spotlight__c/fields/Select_one_or_more_topics__c.field-meta.xml
<CustomField>
    <fullName>Select_one_or_more_topics__c</fullName>
    <label>Select one or more topics</label>
    <type>TextArea</type>
</CustomField>