force-app/main/default/objects/Partner_Spotlight__c/fields/share_story_in_NCR_Partner_Communication__c.field-meta.xml
<CustomField>
    <fullName>share_story_in_NCR_Partner_Communication__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check the box if you permit us to share the story in NCR Partner Communications and on NCR Social media platforms</inlineHelpText>
    <label>share story in NCR Partner Communication</label>
    <type>Checkbox</type>
</CustomField>