force-app/main/default/objects/Partner_Spotlight__c/fields/Social_platform_to_share_NCR_Content__c.field-meta.xml
<CustomField>
    <fullName>Social_platform_to_share_NCR_Content__c</fullName>
    <inlineHelpText>Which Social media platform(s) did you choose to share NCR content? Please share the message with us below.</inlineHelpText>
    <label>Social platform to share NCR Content</label>
    <type>TextArea</type>
</CustomField>