force-app/main/default/objects/Partner_Spotlight__c/fields/Story_on_NCR_Partner_Comm_Social_Media__c.field-meta.xml
<CustomField>
    <fullName>Story_on_NCR_Partner_Comm_Social_Media__c</fullName>
    <label>Story on NCR Partner Comm &amp; Social Media</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>