force-app/main/default/objects/Partner_Spotlight__c/fields/Success_Story__c.field-meta.xml
<CustomField>
    <fullName>Success_Story__c</fullName>
    <inlineHelpText>2 messages of varying lengths should be submitted to cover limitations of the different media platforms. The length includes spaces, and please submit an image.

Message up to 250 characters in length
Message up to 140 characters in length</inlineHelpText>
    <label>Success Story</label>
    <type>TextArea</type>
</CustomField>