force-app/main/default/objects/Partner_Spotlight__c/fields/Successful_Event__c.field-meta.xml
<CustomField>
    <fullName>Successful_Event__c</fullName>
    <label>Successful Event</label>
    <type>TextArea</type>
</CustomField>