force-app/main/default/objects/Partner_Spotlight__c/fields/Type_of_Event__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Event__c</fullName>
    <inlineHelpText>Explain the type of event that was held, what solutions were showcased, and the number of other vendors that participated with you.</inlineHelpText>
    <label>Type of Event</label>
    <type>TextArea</type>
</CustomField>