force-app/main/default/objects/Partner_Spotlight__c/fields/Why_was_the_win_significant__c.field-meta.xml
<CustomField>
    <fullName>Why_was_the_win_significant__c</fullName>
    <label>Why was the win significant</label>
    <type>TextArea</type>
</CustomField>